--- a/package.json
+++ b/package.json
@@ -29,12 +29,12 @@
     "url": "https://github.com/AlisonVilela/ngx-zendesk-webwidget/issues"
   },
   "devDependencies": {
-    "@angular/common": "6.0.0",
-    "@angular/compiler": "6.0.0",
-    "@angular/compiler-cli": "6.0.0",
-    "@angular/core": "6.0.0",
-    "@angular/platform-browser": "6.0.0",
-    "@angular/platform-browser-dynamic": "6.0.0",
+    "@angular/common": "8.2.9",
+    "@angular/compiler": "8.2.9",
+    "@angular/compiler-cli": "8.2.9",
+    "@angular/core": "8.2.9",
+    "@angular/platform-browser": "8.2.9",
+    "@angular/platform-browser-dynamic": "8.2.9",
     "@compodoc/compodoc": "1.0.5",
     "@types/jasmine": "2.8.4",
     "@types/node": "9.3.0",
@@ -58,11 +58,12 @@
     "protractor": "5.2.2",
     "rollup": "0.54.1",
     "run-sequence": "2.2.1",
-    "rxjs": "6.0.0",
+    "rxjs": "6.5.3",
     "ts-node": "4.1.0",
+    "tsickle": "^0.37.0",
     "tslint": "5.9.1",
-    "typescript": "2.7.2",
-    "zone.js": "0.8.20"
+    "typescript": "3.5.3",
+    "zone.js": "0.9.1"
   },
   "engines": {
     "node": "6.0.0"
